Feat: Add emojis to messages

--- a/action.yml
+++ b/action.yml
@@ -28,8 +28,7 @@ runs:
         token: ${{ inputs.telegram_token }}
         format: html
         message: |
-          <b>Success</b>
-
+          <b>🟢Success</b>
           <pre>Job:      ${{ github.job }}
           Workflow: ${{ github.workflow }}
           Repo:     ${{ repo }}
@@ -51,8 +50,7 @@ runs:
         token: ${{ inputs.telegram_token }}
         format: html
         message: |
-          <b>Failure</b>
-
+          <b>🔴Failure</b>
           <pre>Job:      ${{ github.job }}
           Workflow: ${{ github.workflow }}
           Repo:     ${{ repo }}
@@ -74,8 +72,7 @@ runs:
         token: ${{ inputs.telegram_token }}
         format: html
         message: |
-          <b>Cancelled</b>
-
+          <b>🟡Cancelled</b>
           <pre>Job:      ${{ github.job }}
           Workflow: ${{ github.workflow }}
           Repo:     ${{ repo }}
