--- a/action.yml
+++ b/action.yml
@@ -66,7 +66,7 @@ runs:
           ${{ github.event.commits[0].message }}
           </pre>
 
-    - name: Send Telegram Cancelation Message
+    - name: Send Telegram Cancellation Message
       if: ${{ inputs.job_status == 'cancelled' }}
       uses: appleboy/telegram-action@master
       env:
