Style: Alter message detail
- Rename `Branch`  in `action.yml` as `Ref` @ 40, 63, 86.
  This is done because sometimes the trigger for the run is not a branch, but it's always a ref.

--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ runs:
           <pre>Job:      ${{ github.job }}
           Workflow: ${{ github.workflow }}
           Repo:     ${{ github.repository }}
-          Branch:   ${{ github.ref_name }}
+          Ref:   ${{ github.ref_name }}
           Owner:    ${{ github.repository_owner }}
           Event:    ${{ github.event_name }}
           </pre>
@@ -60,7 +60,7 @@ runs:
           <pre>Job:      ${{ github.job }}
           Workflow: ${{ github.workflow }}
           Repo:     ${{ github.repository }}
-          Branch:   ${{ github.ref_name }}
+          Ref:   ${{ github.ref_name }}
           Owner:    ${{ github.repository_owner }}
           Event:    ${{ github.event_name }}
           </pre>
@@ -83,7 +83,7 @@ runs:
           <pre>Job:      ${{ github.job }}
           Workflow: ${{ github.workflow }}
           Repo:     ${{ github.repository }}
-          Branch:   ${{ github.ref_name }}
+          Ref:   ${{ github.ref_name }}
           Owner:    ${{ github.repository_owner }}
           Event:    ${{ github.event_name }}
           </pre>
